# pathergytest

./: .gitignore  .pylintrc  .python_version  README.md  REGISTRATION_STATUS.md  SECURITY_REVIEW.md  compare_all_registration_methods.py  compare_registration_methods.py  debug_all_red.py  detect_two_sites_simple.py  diagnose_detection.py  extract_landmarks.py  extract_landmarks_improved.py  get_anatomical_landmarks_final.py  hybrid_landmark_detection.py  landmark_registration.py  landmarks.json  landmarks_precise.json  main.py  pyproject.toml  register_with_deep_features.py  register_with_homography.py  requirements.txt  run_alignment.py  secure_landmark_extraction.py  sift_registration.py  sift_registration_masked.py  sift_transforms.json  test_progression.py  test_sapiens.py  test_vision_models.py  test_vlm_precision.py  verify_final_registration.py  verify_pipeline_landmarks.py  verify_registration.py  visualize_detection.py
.github/workflows/: pylint.yml
config/: landmarks.json  landmarks_manual.json
docs/: CLINICAL_INTERPRETATION.md  TECHNICAL_METHODOLOGY.md
scripts/: compare_all_registration_methods.py  compare_registration_methods.py  hybrid_landmark_detection.py  landmark_registration.py  register_with_deep_features.py  register_with_homography.py  sift_registration.py  sift_registration_masked.py  verify_final_registration.py
src/: detect_two_sites_simple.py  main.py  run_alignment.py  secure_landmark_extraction.py
