[project]
name = "pathergytest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pylint>=4.0.2",
    "scikit-image>=0.25.2",
    "scipy>=1.16.2",
]
